<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0d0d"
    tools:context=".ProfileActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="408dp"
        android:backgroundTint="@color/background_color"
        android:layout_height="41dp"
        android:background="?attr/colorPrimary"
        android:popupTheme="@style/Theme.MaterialComponents.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/white"
            android:paddingLeft="15dp"
            android:drawableStart="@drawable/baseline_arrow_back_24"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="80dp"
            android:paddingLeft="10dp"
            android:background="@drawable/button_shape"
            android:text="support"
            android:textAllCaps="false"
            android:fontFamily="@font/alata"
            android:textSize="10sp"
            android:gravity="center"

            android:drawableStart="@drawable/baseline_textsms_24"
            android:layout_height="wrap_content"/>

    </Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="413dp"
        android:layout_height="404dp"
        android:background="@color/background_color"
        android:paddingBottom="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alata"
            android:text="@string/andaz_kumar"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/alata"
            android:text="@string/member_since_dec_2020"
            android:textColor="#6c6c6c"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"

            android:layout_marginEnd="16dp"
            android:background="@drawable/icon_shape"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="343dp"
            android:layout_height="80dp"

            android:layout_marginTop="24dp"
            android:background="@drawable/box_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/icon_shape_1"
                android:scaleType="center"
                android:src="@drawable/outline_electric_car_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alata"
                android:text="@string/get_to_know_your_vehicles_inside_out"
                android:textColor="#aaaaaa"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                android:fontFamily="@font/alata"
                android:text="@string/cred_garage"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/credit_score"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_shape_1"
                android:scaleType="center"
                android:src="@drawable/baseline_speed_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/credit_score"
                android:textColor="#aaaaaa" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/bullet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/alata"
                android:text="@string/refresh_available"
                android:textColor="#23bf74"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"

                android:fontFamily="@font/alata"
                android:text="@string/_757"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cashback"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_shape_1"
                android:scaleType="center"
                android:src="@drawable/baseline_currency_rupee_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="lifetime cashback"
                android:textColor="#aaaaaa" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"

                android:fontFamily="@font/alata"
                android:text="@string/symbol"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/balance"
            android:layout_width="345dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_shape_1"
                android:scaleType="center"
                android:src="@drawable/baseline_account_balance_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/bank_balance"
                android:textColor="#aaaaaa" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="167dp"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                android:fontFamily="@font/alata"
                android:text="check"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cashback" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/credit_score" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="281dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.825">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alata"
            android:text="@string/your_rewards_benefits"
            android:textColor="#6c6c6c" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:text="@string/cashback_balance_n_u20b9_0"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:fontFamily="@font/alata"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:text="coins \n26,46,583"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:text="@string/win_upto_rs_1000_nrefer_and_earn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/transactions_support"
            android:textColor="#6c6c6c" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:fontFamily="@font/alata"
            android:text="@string/all_transactions"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>